--- a/IrvingParkContactList/IrvingParkContactList.csproj
+++ b/IrvingParkContactList/IrvingParkContactList.csproj
@@ -179,9 +179,21 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\IdentityModels.cs" />
-    <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Migrations\201507201608421_InitialCreate.cs" />
+    <Compile Include="Migrations\201507201608421_InitialCreate.Designer.cs">
+      <DependentUpon>201507201608421_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201507201709470_Contacts.cs" />
+    <Compile Include="Migrations\201507201709470_Contacts.Designer.cs">
+      <DependentUpon>201507201709470_Contacts.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\Accounts\AccountViewModels.cs" />
+    <Compile Include="Models\ApplicationDbContext.cs" />
+    <Compile Include="Models\CityBlock.cs" />
+    <Compile Include="Models\Contact.cs" />
+    <Compile Include="Models\Accounts\IdentityModels.cs" />
+    <Compile Include="Models\Accounts\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -261,6 +273,14 @@
   <ItemGroup>
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201507201608421_InitialCreate.resx">
+      <DependentUpon>201507201608421_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201507201709470_Contacts.resx">
+      <DependentUpon>201507201709470_Contacts.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
