--- a/IrvingParkContactList/Web.config
+++ b/IrvingParkContactList/Web.config
@@ -11,11 +11,14 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-IrvingParkContactList-20150720100908.mdf;Initial Catalog=aspnet-IrvingParkContactList-20150720100908;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
-  <appSettings>
-    <add key="webpages:Version" value="3.0.0.0" />
-    <add key="webpages:Enabled" value="false" />
-    <add key="ClientValidationEnabled" value="true" />
-    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+  <appSettings file="AppSettingsSecrets.config">
+      <add key="webpages:Version" value="3.0.0.0" />
+      <add key="webpages:Enabled" value="false" />
+      <add key="ClientValidationEnabled" value="true" />
+      <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+      
+      <add key="GoogleClientID" value="" />
+      <add key="GoogleClientSecret" value="" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
