--- a/IrvingParkContactList/Web.config
+++ b/IrvingParkContactList/Web.config
@@ -4,7 +4,7 @@
         <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </configSections>
     <connectionStrings>
-        <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-IrvingParkContactList-20150720100908.mdf;Initial Catalog=aspnet-IrvingParkContactList-20150720100908;Integrated Security=True" providerName="System.Data.SqlClient" />
+        <add name="DefaultConnection_local" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-IrvingParkContactList-20150720100908.mdf;Initial Catalog=aspnet-IrvingParkContactList-20150720100908;Integrated Security=True" providerName="System.Data.SqlClient" />
     </connectionStrings>
     <appSettings file="AppSettingsSecrets.config">
         <add key="webpages:Version" value="3.0.0.0" />
@@ -25,6 +25,28 @@
             <remove name="FormsAuthentication" />
         </modules>
     </system.webServer>
+
+        <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+        <providers>
+            <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6" />
+            <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+        </providers>
+
+        <!--<defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+            <parameters>
+                <parameter value="mssqllocaldb" />
+            </parameters>
+        </defaultConnectionFactory>
+        <providers>
+            <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+        </providers>-->
+    </entityFramework>
+
+        <DbProviderFactories>
+            <remove invariant="MySql.Data.MySqlClient" />
+            <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.7.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"/>
+        </DbProviderFactories>
+
     <runtime>
         <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
             <dependentAssembly>
@@ -73,14 +95,4 @@
             </dependentAssembly>
         </assemblyBinding>
     </runtime>
-    <entityFramework>
-        <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
-            <parameters>
-                <parameter value="mssqllocaldb" />
-            </parameters>
-        </defaultConnectionFactory>
-        <providers>
-            <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-        </providers>
-    </entityFramework>
 </configuration>
