--- a/IrvingParkContactList/Web.config
+++ b/IrvingParkContactList/Web.config
@@ -4,6 +4,7 @@
         <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </configSections>
     <connectionStrings>
+        <add name="DefaultConnection" connectionString="server=;port=3306;user=;password=;database=AAAli0s_IPCL" providerName="MySql.Data.MySqlClient" />
         <add name="DefaultConnection_local" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-IrvingParkContactList-20150720100908.mdf;Initial Catalog=aspnet-IrvingParkContactList-20150720100908;Integrated Security=True" providerName="System.Data.SqlClient" />
     </connectionStrings>
     <appSettings file="AppSettingsSecrets.config">
@@ -26,6 +27,7 @@
         </modules>
     </system.webServer>
 
+    <entityFramework codeConfigurationType="MySql.Data.Entity.MySqlEFConfiguration, MySql.Data.Entity.EF6">
         <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
         <providers>
             <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6" />
@@ -42,10 +44,12 @@
         </providers>-->
     </entityFramework>
 
+    <!--<system.data>
         <DbProviderFactories>
             <remove invariant="MySql.Data.MySqlClient" />
             <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.7.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"/>
         </DbProviderFactories>
+    </system.data>-->
 
     <runtime>
         <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
