--- a/IrvingParkContactList/Web.config
+++ b/IrvingParkContactList/Web.config
@@ -3,11 +3,12 @@
     <configSections>
         <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </configSections>
-    <connectionStrings>
-        <add name="DefaultConnection" connectionString="server=;port=3306;user=;password=;database=AAAli0s_IPCL" providerName="MySql.Data.MySqlClient" />
-        <add name="DefaultConnection_local" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-IrvingParkContactList-20150720100908.mdf;Initial Catalog=aspnet-IrvingParkContactList-20150720100908;Integrated Security=True" providerName="System.Data.SqlClient" />
+    
+    <connectionStrings configSource="connectionstrings.secret.config">
+        <add name="DefaultConnection" connectionString="" />
     </connectionStrings>
-    <appSettings file="AppSettingsSecrets.config">
+    
+    <appSettings file="appsettings.secret.config">
         <add key="webpages:Version" value="3.0.0.0" />
         <add key="webpages:Enabled" value="false" />
         <add key="ClientValidationEnabled" value="true" />
@@ -16,11 +17,13 @@
         <add key="GoogleClientID" value="" />
         <add key="GoogleClientSecret" value="" />
     </appSettings>
+    
     <system.web>
         <authentication mode="None" />
         <compilation debug="true" targetFramework="4.5.1" />
         <httpRuntime targetFramework="4.5.1" />
     </system.web>
+    
     <system.webServer>
         <modules>
             <remove name="FormsAuthentication" />
@@ -33,24 +36,8 @@
             <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6" />
             <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
         </providers>
-
-        <!--<defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
-            <parameters>
-                <parameter value="mssqllocaldb" />
-            </parameters>
-        </defaultConnectionFactory>
-        <providers>
-            <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-        </providers>-->
     </entityFramework>
-
-    <!--<system.data>
-        <DbProviderFactories>
-            <remove invariant="MySql.Data.MySqlClient" />
-            <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.7.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"/>
-        </DbProviderFactories>
-    </system.data>-->
-
+    
     <runtime>
         <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
             <dependentAssembly>
