--- a/IrvingParkContactList/Web.Release.config
+++ b/IrvingParkContactList/Web.Release.config
@@ -1,11 +1,12 @@
 ﻿<?xml version="1.0"?>
 
-<!-- For more information on using Web.config transformation visit http://go.microsoft.com/fwlink/?LinkId=301874 -->
-
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
     <system.web>
-        <compilation xdt:Transform="RemoveAttributes(debug)" />
+        <compilation  />
     </system.web>
+
+    <connectionStrings xdt:Transform="RemoveAttributes(configSource)">
+    </connectionStrings>
     
     <entityFramework xdt:Transform="Replace">
         <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
@@ -15,11 +16,4 @@
         </providers>
     </entityFramework>
 
-    <!--<system.data>
-        <DbProviderFactories >
-            <remove invariant="MySql.Data.MySqlClient" />
-            <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.8.3.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"/>
-        </DbProviderFactories>
-    </system.data>-->
-    
 </configuration>
